--- a/bt7*.html
+++ b/bt7*.html
@@ -8,3 +8,21 @@
 
 </body>
 </html>
+<script>
+    let a = Math.floor(Math.random() * 2);
+    let b = Math.floor(Math.random() * 2);
+    let c = Math.floor(Math.random() * 2);
+    if (a==b & a==c) {
+        alert("Hoà");
+    } else {
+        if (a==b) {
+            alert("Cuong win");
+        } else {
+            if (a==c) {
+                alert("Binh win");
+            } else {
+                alert("An win");
+            }
+        }
+    }
+</script>
