--- a/bt7*.html
+++ b/bt7*.html
@@ -25,4 +25,19 @@
             }
         }
     }
+    if (a==0){
+        document.write("Đồng xu của An : sấp <br>");
+    } else {
+        document.write("Đồng xu của An : ngửa <br>");
+    }
+    if (b==0){
+        document.write("Đồng xu của Bình : sấp <br>");
+    } else {
+        document.write("Đồng xu của Bình : ngửa <br>");
+    }
+    if (c==0){
+        document.write("Đồng xu của Cường : sấp <br>");
+    } else {
+        document.write("Đồng xu của Cường : ngửa <br>");
+    }
 </script>
